Fix what the review found, chart of the close included
The worst of it was a chart that lied. Closing an event returned the leftover
straight into the market maker's Account with drainInto, going around
User.receive and therefore around the balance history, so the single largest
movement of their money was the one their chart left out - it ended at 9931.78
while the balance printed directly beside it read 9983.09. The money now
passes through receive() like every other movement, and the two agree.

Closing also recorded no price at all, so both lines stopped at the last trade
and the event was never seen being decided. It now records where the prices
finally landed, and once an event is closed that is no longer a matter of
opinion: the winning option is worth its full payout and the rest are worth
nothing.

The form could create an event with two outcomes of the same name, which the
loader refuses in a file with "there is nothing to choose between". The form
was a way around a rule the engine enforces elsewhere; now it is not.

close() never checked whether the market maker was blocked. Worth being exact
about the sibling case: open() was already unreachable for a blocked user, but
only by accident - a blocked balance is negative, so the affordability check
happened to catch it. Both now say what they mean.

The file loader ran on a background thread while the tabs stayed live, so the
engine could be mutated from two threads at once by pressing Buy during the
progress bar. The tabs close for the moment it takes.

Also: outcome fields took their id from the current row count, so removing a
row and adding another produced two nodes with the same id; both histories
returned a full copy on every redraw rather than a view, which grew with every
trade made; test.bat gained a JavaFX dependency without gaining the check for
it that build.bat has; and a handful of fully qualified java.util names,
titled() returning a two element list only to be unpacked, and a local called
g